Added font for Hampton

--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -54,6 +54,12 @@
           src: url('fonts/Brandon-Black.woff') format("woff");
       }
       .BrandonBlack { font-family: BrandonBlack; }
+
+      @font-face {
+          font-family: GarageGothicBold;
+          src: url('fonts/GarageGothic-Bold.woff') format("woff");
+      }
+      .GarageGothicBold { font-family: GarageGothicBold; }
     </style>
     <!--
       Available Classes:-
@@ -264,6 +270,9 @@
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.width = '75px';
                     document.querySelector("#logoImage").style.left = '507px';
+
+                    document.querySelector("#ad").style.fontFamily = "GarageGothicBold";
+                    document.querySelector("#cta").style.fontFamily = "GarageGothicBold";
                   }else if(homewoodCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'homewood';
                     document.querySelector("#logoImage").style.width = '78px';
