--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -54,6 +54,12 @@
           src: url('fonts/Brandon-Black.woff') format("woff");
       }
       .BrandonBlack { font-family: BrandonBlack; }
+
+      @font-face {
+          font-family: GarageGothicBold;
+          src: url('fonts/GarageGothic-Bold.woff') format("woff");
+      }
+      .GarageGothicBold { font-family: GarageGothicBold; }
     </style>
     <!--
       Available Classes:-
@@ -271,6 +277,9 @@
                     document.querySelector("#logoImage").style.height = '93px';
                     document.querySelector("#logoImage").style.top = '163px';
                     document.querySelector("#logoImage").style.left = '20px';
+
+                    document.querySelector("#ad").style.fontFamily = "GarageGothicBold";
+                    document.querySelector("#cta").style.fontFamily = "GarageGothicBold";
                   }else if(homewoodCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'homewood';
                     document.querySelector("#logoImage").style.height = '90px';
