--- a/A/Altice/Altice_Holiday2020(FrameSwap)/ads/MC_OPT_1P_35_1yr(300 Mbps)/320x50/320x50_frame1.html
+++ b/A/Altice/Altice_Holiday2020(FrameSwap)/ads/MC_OPT_1P_35_1yr(300 Mbps)/320x50/320x50_frame1.html
@@ -111,7 +111,7 @@ amo.registerAttribute("frameText1", "TEXT", "Vive la emoción");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top:3px;left:8px;'><div class='bulletedText'>Internet de hasta 300 megas</div></div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top:17px;left:8px;'><div class='bulletedText'>Instalación gratis</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top: 30px;left: 8px;font-size:8px;line-height: 1.2;'>Velocidades, precios y disponibilidad varían<br>según el área</div>");
-amo.registerAttribute("frameText31", "TEXT", "<div style='top: 10px;left: 9px;font-size: 12.2px;'><font style='color:#0084d6;'>$100</font> ¡Tarjeta prepagada Visa<sup style='font-size: 64%;vertical-align: 40%;'>®</sup>!</div>");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top: 10px;left: 9px;font-size: 12.2px;'>¡Tarjeta prepagada Visa<sup style='font-size: 64%;vertical-align: 40%;'>®</sup> <font style='color:#0084d6;'>$100</font>!</div>");
 amo.registerAttribute("frameText32", "TEXT", "<div style='top:25px;left:9px;font-size:9px;' class='AlticeRegular'>Aplican términos.</div>");
 amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText41", "TEXT", "<div style='top:2px;left:8px;font-size:13px;'>Internet de 300 megas</div>");
