--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -50,16 +50,22 @@
       .BreeSerifEb { font-family: BreeSerifEb; }
 
       @font-face {
-          font-family: BrandonBlack;
-          src: url('fonts/Brandon-Black.woff') format("woff");
+          font-family: AvenirNextBold;
+          src: url('fonts/AvenirNext-Bold.woff') format("woff");
       }
-      .BrandonBlack { font-family: BrandonBlack; }
+      .AvenirNextBold { font-family: AvenirNextBold; }
 
       @font-face {
           font-family: GarageGothicBold;
           src: url('fonts/GarageGothic-Bold.woff') format("woff");
       }
       .GarageGothicBold { font-family: GarageGothicBold; }
+
+      @font-face {
+          font-family: FranklinGothicMed;
+          src: url('fonts/FranklinGothicMed.woff') format("woff");
+      }
+      .FranklinGothicMed { font-family: FranklinGothicMed; }
     </style>
     <!--
       Available Classes:-
@@ -223,6 +229,10 @@
               var tapestryCodes = splitCodes("UP");
               var hgvCodes = splitCodes("HG");
 
+              if(displayValue.toUpperCase().indexOf('HGV') != -1 && displayValue.toUpperCase().indexOf('HG') != -1 && displayValue.toUpperCase().indexOf('HI') != -1){
+                displayValue = splitCodes("HG");
+              }
+
               var matchingCodes = (displayValue && displayValue.length)?(splitCodes(displayValue + "")):null;
               var whitePatchColor = "#fff";
               var logoImageName = "hilton";
@@ -239,6 +249,7 @@
                     document.querySelector("#logoImage").style.top = '-3px';
 
                     document.querySelector("#ad").style.fontFamily = "NobelBold";
+                    document.querySelector("#cta").style.fontFamily = "FranklinGothicMed";
                   }else if(embassyCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'embassysuites';
                     document.querySelector("#logoImage").style.width = '38px';
@@ -257,7 +268,7 @@
                     document.querySelector("#logoImage").style.width = '107px';
                     document.querySelector("#logoImage").style.height = '107px';
 
-                    document.querySelector("#ad").style.fontFamily = "BrandonBlack";
+                    document.querySelector("#ad").style.fontFamily = "AvenirNextBold";
                   }else if(hiltonGardenCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hgi';
 
