added Open Source

--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
@@ -111,6 +111,7 @@
         var adUrl = '';
         switch(adData.layout){
           case 'Migration' : adURL = 'Migration/Template_V4_Illustration_300x250.htm';break;
+          case 'Open Source' : adURL = 'Open Source/Template_V4_Illustration_300x250.htm';break;
         }
         var iframe = document.createElement('iframe');
         iframe.src = adURL;
