--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRentals/320x50_EpicMountainRentals.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRentals/320x50_EpicMountainRentals.htm
@@ -88,7 +88,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          /* border-radius: 12px; */
+           border-radius: 12px; 
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
