--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRentals/728x90_EpicMountainRentals.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRentals/728x90_EpicMountainRentals.htm
@@ -88,7 +88,7 @@
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          /*border-radius: 12px;*/
+          border-radius: 12px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
