--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x600/Base/Template_V4_Illustration_300x600.htm
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x600/Base/Template_V4_Illustration_300x600.htm
@@ -21,8 +21,8 @@ body {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/EaselPlugin.min.js"></script>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="Template_V4_Illustration_300x250.js?1501171107836"></script>
-<meta name="ad.size" content="width=300,height=250">
+<script src="Template_V4_Illustration_300x600.js?1501171107836"></script>
+<meta name="ad.size" content="width=300,height=600">
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation, initReady
 initReady=false
@@ -40,8 +40,8 @@ function init() {
 	loader.loadManifest(lib.properties.manifest);
 }
 function handleFileLoad(evt, comp) {
-	var images=comp.getImages();
-	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }
+	var images=comp.getImages();	
+	if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
 }
 function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
@@ -52,57 +52,57 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.Template_V4_Illustration_300x250();
-	stage = new lib.Stage(canvas);
+	exportRoot = new lib.Template_V4_Illustration_300x600();
+	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
 		stage.addChild(exportRoot);
 		createjs.Ticker.framerate = lib.properties.fps;
 		createjs.Ticker.addEventListener("tick", stage);
-	}
+	}	    
 	//Code to support hidpi screens and responsive scaling.
-	AdobeAn.makeResponsive(false,'both',false,1,[canvas,anim_container,dom_overlay_container]);
+	AdobeAn.makeResponsive(false,'both',false,1,[canvas,anim_container,dom_overlay_container]);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
-
+		
 	 if (!initReady) {
         startBanner()
     }
-
+	
     TweenMax.delayedCall(0.2,function(){
-				// var iframe = window.frameElement;
-				// var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
-				// var bannerData = parentWindow.getBannerData();
-				// bannerData.headline1 = eval(bannerData.textField1);
-				// bannerData.CTA = eval(bannerData.ctaText);
-				// bannerData.CTAarrowVisible = eval(bannerData.CTAarrowVisible);
-				// // bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
-				// var mainHit = document.getElementById("hit");
-				// mainHit.addEventListener("click", function(){
-				// 	parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
-				// 	if(bannerData.clickTracker) {
-				// 		var clickTrackers = bannerData.clickTracker.split('^');
-				// 		clickTrackers.forEach(function(url){
-				// 			if(url && url.toLowerCase() != 'na') {
-				// 					(new Image()).src = url;
-				// 			}
-				// 		});
-				// 	}
-				// });
-				// if(bannerData.impressionTracker) {
-				// 	var impressionTrackers = bannerData.impressionTracker.split('^');
-				// 	impressionTrackers.forEach(function(url){
-				// 		if(url && url.toLowerCase() != 'na') {
-				// 				(new Image()).src = url;
-				// 		}
-				// 	});
-				// }
+				var iframe = window.frameElement;
+				var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
+				var bannerData = parentWindow.getBannerData();
+				bannerData.headline1 = eval(bannerData.textField1);
+				bannerData.CTA = eval(bannerData.ctaText);
+				bannerData.CTAarrowVisible = eval(bannerData.CTAarrowVisible);
+				// bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
+				var mainHit = document.getElementById("hit");
+				mainHit.addEventListener("click", function(){
+					parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
+					if(bannerData.clickTracker) {
+						var clickTrackers = bannerData.clickTracker.split('^');
+						clickTrackers.forEach(function(url){
+							if(url && url.toLowerCase() != 'na') {
+									(new Image()).src = url;
+							}
+						});
+					}
+				});
+				if(bannerData.impressionTracker) {
+					var impressionTrackers = bannerData.impressionTracker.split('^');
+					impressionTrackers.forEach(function(url){
+						if(url && url.toLowerCase() != 'na') {
+								(new Image()).src = url;
+						}
+					});
+				}
         exportRoot.initBanner(bannerData)
         exportRoot.runBanner()
     })
 	initReady=true
 }
-
+	
 var loadFont = false
 	var loadBody = false
 	function loaded(type) {
@@ -110,7 +110,7 @@ var loadFont = false
 		if (type=='body') loadBody=true
 		if (loadFont && loadBody) init()
 	}
-
+	
 	(function() {
 		// Optimization for Repeat Views
 
@@ -140,11 +140,11 @@ var loadFont = false
 <!-- write your code here -->
 </head>
 <body onload="loaded('body')" style="margin:0px;">
-
-<div id="hit" style="display:block; position:absolute; top:0px; left:0px; width:300px; height:250px; z-index:99999 !important; cursor:pointer; "></div>
-<div id="animation_container" style="background-color:#FFFFFF; width:300px; height:250px">
-	<canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer;" role="img"></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
+    
+<div id="hit" style="display:block; position:absolute; top:0px; left:0px; width:300px; height:600px; z-index:99999 !important; cursor:pointer; "></div>
+<div id="animation_container" style="background-color:#FFFFFF; width:300px; height:600px">
+	<canvas id="canvas" width="300" height="600" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer;" role="img"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:600px; position: absolute; left: 0px; top: 0px; display: block;">
 		<div style="position: absolute; border: 1px solid black; box-sizing: border-box; background-color:transparent; top: 0; left: 0; width: 100%; bottom: 0;"></div>
 		</div>
 </div>
@@ -152,78 +152,23 @@ var loadFont = false
 
 <script>
 var startBanner = function(){
-
+			
 				var mainHit = document.getElementById("hit");
 				var animation_container = document.getElementById("animation_container");
-				mainHit.addEventListener("mouseover", over.bind(this));
+				mainHit.addEventListener("mouseover", over.bind(this));  
 				function over() {
 				exportRoot.mainMC.cta.arrow.gotoAndStop(1);
-				}
+				}  
 
-				mainHit.addEventListener("mouseout", out.bind(this));
+				mainHit.addEventListener("mouseout", out.bind(this));  
 				function out() {
 						exportRoot.mainMC.cta.arrow.gotoAndStop(0);
-				}
+				}  
 				// mainHit.addEventListener("click", exitHandler.bind(this));
 				// function exitHandler() {
 				//   window.open(clickTag);
-				// }
-				amoAd.addTracker();
+				// }			
 		}
 </script>
-<script type="text/javascript">
-	var amoAd = (function(){
-		var iframe = window.frameElement;
-		var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
-		window.bannerData = parentWindow.getBannerData();
-		bannerData.headline1 = eval(bannerData.textField1);
-		bannerData.CTA = eval(bannerData.ctaText);
-		bannerData.CTAarrowVisible = eval(bannerData.CTAarrowVisible);
-		// bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
-		function addTracker() {
-			var mainHit = document.getElementById("hit");
-			mainHit.addEventListener("click", function(){
-				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
-				if(bannerData.clickTracker) {
-					var clickTrackers = bannerData.clickTracker.split('^');
-					clickTrackers.forEach(function(url){
-						if(url && url.toLowerCase() != 'na') {
-								(new Image()).src = url;
-						}
-					});
-				}
-			});
-			if(bannerData.impressionTracker) {
-				var impressionTrackers = bannerData.impressionTracker.split('^');
-				impressionTrackers.forEach(function(url){
-					if(url && url.toLowerCase() != 'na') {
-							(new Image()).src = url;
-					}
-				});
-			}
-		}
-		function click(id) {
-			if(id == -1 && parentWindow.urls[0].defaultPath.toLowerCase() != 'na') {
-					parentWindow.amo.onDynAdClick(parentWindow.urls[0].data, "CLICK", parentWindow.urls[0].defaultPath, parentWindow.urls[0].defaultClickLabel);
-			} else if(id >= 0 && parentWindow.urls[id].path.toLowerCase() != 'na') {
-					parentWindow.amo.onDynAdClick(parentWindow.urls[id].data, "CLICK", parentWindow.urls[id].path, parentWindow.urls[id].clickLabel);
-			}
-		}
-		function onInteraction(id) {
-			var parentWindows = window.parent.parent.window;
-			if (parentWindows && 'amoUtils' in parentWindows && 'onInteraction' in parentWindows.amoUtils) {
-				try {
-					if(id == -1) { parentWindows.amoUtils.onInteraction(parentWindow.urls[0].defaultLabel, parentWindow.urls[0].data); }
-					else { parentWindows.amoUtils.onInteraction(parentWindow.urls[id].label, parentWindow.urls[id].data); }
-				} catch (e) {}
-			}
-		}
-		return {
-			addTracker: function(){ addTracker(); },
-			click: function(id) { click(id); },
-			onInteraction: function(id) { onInteraction(id); }
-		};
-	})();
-</script>
-</body>
+</body>	
 </html>
