--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
@@ -111,8 +111,8 @@
         var adUrl = '';
         switch(adData.layout){
           case 'Illustration_AI' :
-          case 'Illustration_HybridCloud' :
-          case 'Illustration_MachineLearning' :
+          case 'Illustration_Hybrid' :
+          case 'Illustration_ML' :
           case 'Illustration_Migration' :
           case 'Illustration_OpenSource' :
           case 'Lifestyle_Male' :
@@ -120,11 +120,11 @@
           case 'UI_AI' :
           case 'UI_FreeAccount' :
           case 'UI_HybridCloud' :
-          case 'UI_MachineLearning' :
+          case 'UI_ML' :
           case 'UI_Migration' :
           case 'UI_OpenSource' : adURL = 'Base/Template_V4_Illustration_300x250.htm';break;
-          case 'Migration' : adURL = 'Migration/Template_V4_Illustration_300x250.htm';break;
-          case 'Open Source' : adURL = 'Open Source/Template_V4_Illustration_300x250.htm';break;
+          // case 'Migration' : adURL = 'Migration/Template_V4_Illustration_300x250.htm';break;
+          // case 'Open Source' : adURL = 'Open Source/Template_V4_Illustration_300x250.htm';break;
         }
         var iframe = document.createElement('iframe');
         iframe.src = adURL;
