AMO-141363, Reverted thecode

--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
@@ -83,7 +83,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          /* border-radius: 15px; */
+           border-radius: 15px; 
           color: #031e63;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -155,10 +155,10 @@
                 cta.dataset.style = 'padding:0px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                  frameText[i].style.top = '181px';
+                  frameText[i].style.top = '171px';
                   frameText[i].style.left = '10px';
                   frameText[i].style.width = '280px';
-                  frameText[i].style.height = '20px';
+                  frameText[i].style.height = '40px';
                   frameText[i].style.textAlign = 'center';
                 }
               } else if(layout == 'multipleimagesoffer') {
