--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
@@ -83,7 +83,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          /* border-radius: 12px; */
+           border-radius: 12px; 
           color: #031e63;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -155,9 +155,9 @@
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.top = '10px';
+                 frameText[i].style.top = '3px';
                  frameText[i].style.width = '138px';
-                 frameText[i].style.height = '10px';
+                 frameText[i].style.height = '20px';
                 }
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {y:13}, '#saleImage': {css:{display:'block'}}}";
