--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
@@ -83,7 +83,7 @@
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          /*border-radius: 12px;*/
+          border-radius: 12px;
           color: #031e63;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -156,8 +156,8 @@
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.width = '275px';
-                 frameText[i].style.height = '20px';
-                 frameText[i].style.top = '18px';
+                 frameText[i].style.height = '40px';
+                 frameText[i].style.top = '8px';
                  frameText[i].style.fontSize = '18.2px';
                  frameText[i].style.lineHeight = '1.2';
                 }
