--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
@@ -84,7 +84,7 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          /*border-radius: 20px;*/
+          border-radius: 20px;
           color: #031e63;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
