--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/EpicMountainRentals/300x600_EpicMountainRentals.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/EpicMountainRentals/300x600_EpicMountainRentals.htm
@@ -91,7 +91,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          border-radius: 15px;
+          /*border-radius: 15px;*/
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
