--- a/M/Microsoft/M365_Holiday_Mobile_2020/ads/250x250/PPT/M365_MobileFY21Q2Holiday_USA_250x250_BAN_PPTInt_EN_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Holiday_Mobile_2020/ads/250x250/PPT/M365_MobileFY21Q2Holiday_USA_250x250_BAN_PPTInt_EN_NA_Standard_ANI_BN_NA_1.htm
@@ -307,7 +307,8 @@ var startBanner = function(){
 										var parentWindows = window.parent.parent.window;
 										if (parentWindows && 'amoUtils' in parentWindows && 'onInteraction' in parentWindows.amoUtils) {
 											try {
-												parentWindows.amoUtils.onInteraction(parentWindow.layout, parentWindow.adData.feedData);
+												var smartName = bannerData.headline3 && bannerData.headline2 != ' ' ? ('|' + bannerData.headline2) : '';
+												parentWindows.amoUtils.onInteraction(parentWindow.layout + smartName, parentWindow.adData.feedData);
 											} catch (e) {}
 										}
 									}
