--- a/M/Microsoft/M365_Holiday_Mobile_2020/ads/320x480/PPT/M365_MobileFY21Q2Holiday_USA_320x480_BAN_PPTInt_EN_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Holiday_Mobile_2020/ads/320x480/PPT/M365_MobileFY21Q2Holiday_USA_320x480_BAN_PPTInt_EN_NA_Standard_ANI_BN_NA_1.htm
@@ -319,7 +319,7 @@ var startBanner = function(){
 										var parentWindows = window.parent.parent.window;
 										if (parentWindows && 'amoUtils' in parentWindows && 'onInteraction' in parentWindows.amoUtils) {
 											try {
-												var smartName = bannerData.headline3 && bannerData.headline2 != ' ' ? ('|' + bannerData.headline2) : '';
+												var smartName = bannerData.textField3 && bannerData.textField3 != ' ' ? ('|' + bannerData.textField3) : '';
 												parentWindows.amoUtils.onInteraction(parentWindow.layout + smartName, parentWindow.adData.feedData);
 											} catch (e) {}
 										}
