--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/300x250/z300x250.html
@@ -119,7 +119,7 @@
           case 'Lifestyle_Female' :
           case 'UI_AI' :
           case 'UI_FreeAccount' :
-          case 'UI_HybridCloud' :
+          case 'UI_Hybrid' :
           case 'UI_ML' :
           case 'UI_Migration' :
           case 'UI_OpenSource' : adURL = 'Base/Template_V4_Illustration_300x250.htm';break;
