--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads.html
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads.html
@@ -171,8 +171,8 @@
               frameText4: data.frameText4,
               ctaText: data.CTA,
               clickURL: data.clickURL,
-              productLableLogo: '../../../assets/'+data.productLableLogo,
-              productLableLogoBg: '../../../assets/'+data.productLableLogoBg,
+              productLableLogo: data.productLableLogo,
+              productLableLogoBg: data.productLableLogoBg,
             }`,
           }
           eval(templates[data['template']]);
