--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads.html
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads.html
@@ -165,8 +165,8 @@
               backgroundImage2: '../../../assets/'+data.backgroundImage2,
               backgroundImage3: '../../../assets/'+data.backgroundImage3,
               backgroundImage4: '../../../assets/'+data.backgroundImage4,
-              productLableLogo: '../../../assets/'+data.productLableLogo,
-              productLableLogoBg: '../../../assets/'+data.productLableLogoBg,
+              productLableLogo: data.productLableLogo,
+              productLableLogoBg: data.productLableLogoBg,
               frameText1: data.frameText1,
               frameText2: data.frameText2,
               frameText3: data.frameText3,
