--- a/H/Hilton/Hilton_New_2020_Template/ads.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads.html
@@ -168,6 +168,7 @@
               styleProperties: data.styleProperties,
               ctaText: data.CTA,
               ctaBtnColor: data.ctaBtnColor,
+              disclaimer: data.disclaimer,
               clickURL: data.clickURL,
               ut1: data.ut1,
             }`,
