--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -66,6 +66,24 @@
           src: url('fonts/FranklinGothicMed.woff') format("woff");
       }
       .FranklinGothicMed { font-family: FranklinGothicMed; }
+
+      @font-face {
+          font-family: BrandonGrotesqueBlack;
+          src: url('fonts/Brandon Grotesque Black.woff') format("woff");
+      }
+      .BrandonGrotesqueBlack { font-family: BrandonGrotesqueBlack; }
+
+      @font-face {
+          font-family: AvenirBlack;
+          src: url('fonts/Avenir-Black.woff') format("woff");
+      }
+      .AvenirBlack { font-family: AvenirBlack; }
+
+      @font-face {
+          font-family: DINBold;
+          src: url('fonts/DIN-Bold.woff') format("woff");
+      }
+      .DINBold { font-family: DINBold; }
     </style>
     <!--
       Available Classes:-
@@ -127,7 +145,7 @@
           height: 140px;
           font-size: 23px;;
           line-height: 1;
-          color:#104c97;">
+          color:#FFFFFF;">
       </div>
       <div id="frameText2" dir="auto" class="text-top-left"
         data-text="frameText2"
@@ -137,7 +155,7 @@
           height: 140px;
           font-size: 23px;
           line-height: 1;
-          color:#104c97;">
+          color:#FFFFFF;">
       </div>
       <div id="frameText3" dir="auto" class="text-top-left"
         data-text="frameText3"
@@ -147,7 +165,17 @@
           height: 140px;
           font-size: 23px;
           line-height: 1;
-          color:#104c97;">
+          color:#FFFFFF;">
+      </div>
+      <div id="disclaimer" dir="auto" class="text"
+        data-text="disclaimer"
+        style="top: 582px;
+          left: 0px;
+          width: 160px;
+          height: 10px;
+          font-size: 6px;
+          line-height: 1;
+          color:#FFFFFF;">
       </div>
       <div id="cta" dir="auto" class="text"
         data-text="ctaText"
@@ -187,6 +215,7 @@
             styleProperties: "na",
             ctaText: 'BOOK NOW',
             ctaBtnColor: '#00a8e1^#007096',
+            disclaimer: '*Pet fees apply and vary by hotel.',
             clickURL: 'https://www.adobe.com/#Hilton'
           },
           feed: [
@@ -253,7 +282,9 @@
                     document.querySelector("#cta").style.fontFamily = "FranklinGothicMed";
                   }else if(embassyCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'embassysuites';
-                    document.querySelector("#logoImage").style.top = '376px';
+                    document.querySelector("#logoImage").style.top = '409px';
+
+                    document.querySelector("#ad").style.fontFamily = "AvenirBlack";
                   }else if(doubleTreeCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'doubletree';
                     document.querySelector("#logoImage").style.top = '380px';
@@ -283,9 +314,12 @@
                   }else if(homewoodCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'homewood';
                     document.querySelector("#logoImage").style.top = '406px';
+
+                    document.querySelector("#ad").style.fontFamily = "BrandonGrotesqueBlack";
                   }else if(home2Codes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'home2';
                     
+                    document.querySelector("#ad").style.fontFamily = "DINBold";
                   }else if(lxrCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'lxr';
                     whitePatchColor = '#000';
