fixed 300x250 vertical align

--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -137,9 +137,9 @@
           height: 27px;
           background-color:#fff;">
       </div>
-      <div id="frameText1" dir="auto" class="text-left"
+      <div id="frameText1" dir="auto" class="text-top-left"
         data-text="frameText1"
-        style="top: 7px;
+        style="top: 13px;
           left: 15px;
           width: 260px;
           height: 62px;
@@ -147,9 +147,9 @@
           line-height: 1;
           color:#FFFFFF;">
       </div>
-      <div id="frameText2" dir="auto" class="text-left"
+      <div id="frameText2" dir="auto" class="text-top-left"
         data-text="frameText2"
-        style="top: 7px;
+        style="top: 13px;
           left: 15px;
           width: 260px;
           height: 62px;
@@ -157,9 +157,9 @@
           line-height: 1;
           color:#FFFFFF;">
       </div>
-      <div id="frameText3" dir="auto" class="text-left"
+      <div id="frameText3" dir="auto" class="text-top-left"
         data-text="frameText3"
-        style="top: 7px;
+        style="top: 13px;
           left: 15px;
           width: 260px;
           height: 62px;
